force-app/main/default/objects/Contact_EK__c/Contact_EK__c.object-meta.xml
<CustomObject>
    <description>Created by: EK</description>
    <label>Contact EK</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact EK Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact EK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>