force-app/main/default/objects/Contact_EK__c/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Languages</label>
    <length>50</length>
    <type>Text</type>
</CustomField>