force-app/main/default/objects/Contact_EK__c/fields/Report_to__c.field-meta.xml
<CustomField>
    <fullName>Report_to__c</fullName>
    <description>Created by: EK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Report to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>